Ensure GWLFE modification tooltip text wraps
Setting this property to normal ensures that the text in the
modification tooltip is wrapped in every browser so that it does not
extend outside of the tooltip boundary.

Refs #2039

--- a/src/mmw/sass/base/_header.scss
+++ b/src/mmw/sass/base/_header.scss
@@ -123,7 +123,7 @@ header {
     flex-wrap: nowrap;
 
     .tooltip-inner {
-        white-space: initial;
+        white-space: normal;
         max-width: 100px;
         width: 100px;
     }
